--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -63,12 +63,12 @@
               </mat-form-field>
             </div>
             <div fxLayout="row" fxFlex="20" class="center" style="width: 80%; padding-top: 10px">
-              <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+<!--              <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>-->
 
               <div class="file-upload" style="width: 98%">
                 <div class="file-select">
-                  <div class="file-select-button" id="fileName">Choose File</div>
-                  <div class="file-select-name" id="noFile">No file chosen...</div>
+                  <div class="file-select-button" id="fileName">Elegir archivo</div>
+                  <div class="file-select-name" id="noFile">Ningún archivo seleccionado...</div>
                   <input #file type="file" name="chooseFile" id="chooseFile">
                 </div>
               </div>
@@ -78,7 +78,18 @@
             <img class="center" src="assets/Fondo.png">
           </div>
         </div>
-        <div fxLayout="row" fxFlex="20"></div>
+        <div fxLayout="row" fxFlex="20">
+          <div fxLayout="column" fxFlex="50" style="padding-top: 30px">
+            <button class="center">
+              Cancelar
+            </button>
+          </div>
+          <div fxLayout="column" fxFlex="50" style="padding-top: 30px">
+            <button class="center">
+              Continuar
+            </button>
+          </div>
+        </div>
       </div>
     </mat-card>
   </div>
