--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,7 +1,6 @@
 .topBar{
   height: 80px;
   background: cornsilk;
-  cursor: pointer;
 }
 .artdly{
   max-height: 80px;
@@ -28,137 +27,38 @@
   margin-right: auto;
   display: block;
 }
-.cta {
-  border: none;
-  background: none;
-  cursor: pointer;
+
+
+/* From uiverse.io by @alexruix */
+.input {
+  line-height: 28px;
+  border: 2px solid transparent;
+  border-bottom-color: #777;
+  padding: .2rem 0;
+  outline: none;
+  background-color: transparent;
+  color: #0d0c22;
+  transition: .3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
-.cta span {
-  padding-bottom: 7px;
-  letter-spacing: 4px;
-  font-size: 14px;
-  padding-right: 15px;
-  text-transform: uppercase;
+.input:focus, input:hover {
+  outline: none;
+  padding: .2rem 1rem;
+  border-radius: 1rem;
+  border-color: #7a9cc6;
 }
 
-.cta svg {
-  transform: translateX(-8px);
-  transition: all 0.3s ease;
+.input::placeholder {
+  color: #777;
 }
 
-.cta:hover svg {
-  transform: translateX(0);
-}
-
-.cta:active svg {
-  transform: scale(0.9);
-}
-
-.hover-underline-animation {
-  position: relative;
-  color: black;
-  padding-bottom: 20px;
-}
-
-.hover-underline-animation:after {
-  content: "";
-  position: absolute;
-  width: 63%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #000000;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
-}
-
-.cta:hover .hover-underline-animation:after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-}
-
-
-
-
-
-label {
-  background-color: white;
-  display: flex;
-  align-items: center;
-  gap: 14px;
-  padding: 10px 15px 10px 10px;
-  cursor: pointer;
-  user-select: none;
-  border-radius: 10px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  color: black;
-}
-
-input {
-  display: none;
-}
-
-input:checked + label svg {
-  fill: hsl(0deg 100% 50%);
-  stroke: hsl(0deg 100% 50%);
-  animation: heartButton 1s;
-}
-
-@keyframes heartButton {
-  0% {
-    transform: scale(1);
-  }
-
-  25% {
-    transform: scale(1.3);
-  }
-
-  50% {
-    transform: scale(1);
-  }
-
-  75% {
-    transform: scale(1.3);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-input + label .action {
-  position: relative;
-  overflow: hidden;
-  display: grid;
-}
-
-input + label .action span {
-  grid-column-start: 1;
-  grid-column-end: 1;
-  grid-row-start: 1;
-  grid-row-end: 1;
-  transition: all .5s;
-}
-
-input + label .action span.option-1 {
-  transform: translate(0px,0%);
-  opacity: 1;
-}
-
-input:checked + label .action span.option-1 {
-  transform: translate(0px,-100%);
+.input:focus::placeholder {
   opacity: 0;
+  transition: opacity .3s;
 }
 
-input + label .action span.option-2 {
-  transform: translate(0px,100%);
-  opacity: 0;
-}
 
-input:checked + label .action span.option-2 {
-  transform: translate(0px,0%);
-  opacity: 1;
-}
+
+
+
 
