--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -20,41 +20,48 @@
   <div style="height: 60px"></div>
   <div fxLayout="row" fxLayoutAlign="space-between stretch" class="contentBody">
     <mat-card class="center" style="width: 80%; height: 90%">
-      <div fxLayout="column" fxFlex="50"></div>
       <div fxLayout="column" fxFlex="50">
-        <div fxLayout="column" fxFlex="80" class="center">
-          <div fxLayout="row" fxFlex="12.5" class="center" style="font-size: xx-large; padding-top: 15px">
+        <img class="center" src="assets/register.jpeg">
+      </div>
+      <div fxLayout="column" fxFlex="50">
+        <div fxLayout="column" fxFlex="80" class="center" style="width: 100%; padding-left: 30px">
+          <div fxLayout="row" fxFlex="12.5" style="font-size: xx-large; padding-top: 15px">
             Registrate
           </div>
-          <div fxLayout="row" fxFlex="12.5" style="width: 80%; padding-top: 10px">
-            <input placeholder="Nombre" type="text" class="input" required="">
+          <div fxLayout="row" fxFlex="12.5" style="width: 100%; padding-top: 10px">
+            <input placeholder="Nombre" type="text" style="width: 70%" class="input2" required="">
           </div>
-          <div fxLayout="row" fxFlex="12.5" style="width: 80%; padding-top: 10px">
-            <input placeholder="Apellido" type="text" class="input" required="">
+          <div fxLayout="row" fxFlex="12.5" style="width: 100%; padding-top: 10px">
+            <input placeholder="Apellido" type="text" style="width: 70%" class="input2" required="">
           </div>
-          <div fxLayout="row" fxFlex="12.5" style="width: 80%; padding-top: 10px">
-            <input placeholder="Correo" type="text" class="input" required="">
+          <div fxLayout="row" fxFlex="12.5" style="width: 100%; padding-top: 10px">
+            <input placeholder="Correo" type="text" style="width: 70%" class="input2" required="">
           </div>
-          <div fxLayout="row" fxFlex="12.5" style="width: 80%; padding-top: 10px">
-            <input placeholder="Nick" type="text" class="input" required="">
+          <div fxLayout="row" fxFlex="12.5" style="width: 100%; padding-top: 10px">
+            <input placeholder="Nick" type="text" style="width: 70%" class="input2" required="">
           </div>
-          <div fxLayout="row" fxFlex="12.5" style="width: 80%; padding-top: 10px">
-            <input placeholder="Contraseña" type="text" class="input" required="">
+          <div fxLayout="row" fxFlex="12.5" style="width: 100%; padding-top: 10px">
+            <input placeholder="Contraseña" type="text" style="width: 70%" class="input2" required="">
           </div>
-          <div fxLayout="row" fxFlex="12.5" style="width: 80%; padding-top: 10px">
-            <input placeholder="Describete" type="text" class="input" required="">
+          <div fxLayout="row" fxFlex="12.5" style="width: 100%; padding-top: 10px">
+            <input placeholder="Describete" type="text" style="width: 70%" class="input2" required="">
           </div>
-          <div fxLayout="row" fxFlex="12.5"style="width: 80%; padding-top: 10px">
-            <div class="date-picker">
-              <div class="input">
-                <div class="result">Select Date: <span></span></div>
-                <button><i class="fa fa-calendar"></i></button>
-              </div>
-              <div class="calendar"></div>
-            </div>
+          <div fxLayout="row" fxFlex="12.5" style="width: 100%; padding-top: 10px">
+            <input placeholder="Fecha de nacimiento (aaaa-mm-dd)" type="text" style="width: 70%" class="input2" required="">
           </div>
         </div>
-        <div fxLayout="row" fxFlex="20"></div>
+        <div fxLayout="row" fxFlex="20">
+          <div fxLayout="column" fxFlex="50" style="padding-top: 30px; padding-left: 0px">
+            <button class="center2">
+              Cancelar
+            </button>
+          </div>
+          <div fxLayout="column" fxFlex="50" style="padding-top: 30px">
+            <button class="center2">
+              Continuar
+            </button>
+          </div>
+        </div>
       </div>
     </mat-card>
   </div>
