--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -13,7 +13,7 @@
       <div fxLayout="row" fxFlex="100">
         <div fxLayout="column" fxFlex="40"></div>
         <div fxLayout="column" fxFlex="30">
-          <img (click)="goHome()" class="artdly" src="assets/artdlyLogo.png">
+          <img (click)="goHome()"class="artdly" src="assets/artdlyLogo.png">
 
         </div>
       </div>
@@ -81,12 +81,12 @@
         </div>
         <div fxLayout="row" fxFlex="20">
           <div fxLayout="column" fxFlex="50" style="padding-top: 30px">
-            <button class="center">
+            <button class="center" (click)="goHome()">
               Cancelar
-            </button>
+            </button >
           </div>
           <div fxLayout="column" fxFlex="50" style="padding-top: 30px">
-            <button class="center">
+            <button class="center" (click)="goHome()">
               Continuar
             </button>
           </div>
